making it responsive with clamp

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
   </head>
   <body>
+  <main>
     <section class="image1">
       <div class="content">
         <p>PARALLAX WEBSITE</p>
@@ -87,5 +88,6 @@
         <p>DO SOME CODING</p>
       </div>
     </section>
+  </main>
   </body>
 </html>
